k8s/django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-api
  namespace: agro-saas
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: django-api
